syntax = "proto3";

import "google/protobuf/any.proto";
// import "google/protobuf/empty.proto";
import "base.proto";

package apis;

message MPLSL3Prefix {
  apis.Prefix prefix = 1;
  // vpn label assigned to the prefix by the originating provider edge router
  uint32 vpn_label = 2;
  // Source Autonomous System Number
  uint32 asn = 3;
  // Next hop address
  bytes nh_address = 4;
  google.protobuf.Any rd = 5;
  repeated google.protobuf.Any rt = 6;
}